--- a/source/i/index.html
+++ b/source/i/index.html
@@ -48,7 +48,7 @@
             <i class="fa fa-bars m-icon-nav"></i>
         </div>
     </header>
-    <div class="container container-page">
+    <div class="container container-page" style="padding-right:215px;">
         	<div class="content">
                     <header class="article-header">
                 <h1 class="article-title"><a href="https://blog.sixlab.cn/about">关于我</a></h1>
