--- a/source/i/index.html
+++ b/source/i/index.html
@@ -58,9 +58,9 @@
     职业：高级软件工程师<br>
     地址：上海 · 中国<br>
     博客：<a title="六楼实验室" href="https://blog.sixlab.cn/" target="_blank">六楼实验室</a><br>
-    微博：<a title="六楼的雨" href="http://weibo.com/314566975" target="_blank">六楼的雨</a><br>
+    微博：<a title="六楼的雨" href="https://weibo.com/314566975" target="_blank">六楼的雨</a><br>
     GitHub：<a title="PatrickRoot" href="https://github.com/PatrickRoot" target="_blank">PatrickRoot</a><br>
-    Git@OSC：<a title="PatrickRoot" href="http://git.oschina.net/PatrickRoot" target="_blank">PatrickRoot</a><br>
+    Git@OSC：<a title="PatrickRoot" href="https://gitee.com/PatrickRoot/projects" target="_blank">PatrickRoot</a><br>
     QQ：314566975<br>
     邮箱：<a href="mailto:nianqinianyi@163.com?subject=mail from Sixlab by guest">nianqinianyi#163.com</a></p>
     <p>赤手空拳来到人世间，为写完这段代码不顾一切。</p>
