--- a/source/i/index.html
+++ b/source/i/index.html
@@ -48,8 +48,8 @@
             <i class="fa fa-bars m-icon-nav"></i>
         </div>
     </header>
-    <div class="container container-page" style="padding-right:215px;">
-        	<div class="content">
+    <div class="container container-page" style="padding-left:0;">
+        	<div class="content" style="padding: 20px 235px;">
                     <header class="article-header">
                 <h1 class="article-title"><a href="https://blog.sixlab.cn/about">关于我</a></h1>
             </header>
