minesoft 和 sixlab 的首页  $(hexo)

--- a/source/www/minesoft/index.html
+++ b/source/www/minesoft/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="zh-cn">
 <head>
-<title>六楼实验室</title>
+<title>矿软科技 | 六楼实验室</title>
 <!-- Meta tag Keywords -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="六楼实验室,sixlab,六楼的雨,sixlab.cn,六楼,矿软科技,矿软,minesoft,minesoft.tech" />
+<meta name="keywords" content="矿软科技,矿软,minesoft,minesoft.tech,六楼实验室,sixlab,六楼的雨,sixlab.cn,六楼" />
 <link rel="shortcut icon" href="favicon.ico">
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 function hideURLbar(){ window.scrollTo(0,1); } </script>
@@ -27,7 +27,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 <div class="main">
 	<div class="header">
 		<img src="images/logo@50.png">
-		<h1>六楼实验室 -- 始于2011-09-11</h1>
+		<h1>六楼实验室 -- 始于2018-05-30</h1>
 	</div>
 	<div class="content">
 		<div class="content2">
@@ -42,7 +42,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		</div>
 	</div>
 	<div class="footer">
-		<h2><a href="http://www.miitbeian.gov.cn/" target="_blank">豫ICP备15033629号</a> | 2011 -- 2018 © <a href="https://www.sixlab.cn/">六楼实验室</a></h2>
+		<h2><a href="https://www.minesoft.tech/">矿软科技</a> | 2011 -- 2018 © <a href="https://www.sixlab.cn/ target="_blank"">六楼实验室</a></h2>
 	</div>
 </div>
 <!--js-->
