--- a/source/www/www/index.html
+++ b/source/www/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="zh-cn">
 <head>
-<title>六楼实验室</title>
+<title>六楼实验室 | 矿软科技</title>
 <!-- Meta tag Keywords -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -42,7 +42,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		</div>
 	</div>
 	<div class="footer">
-		<h2><a href="http://www.miitbeian.gov.cn/" target="_blank">豫ICP备15033629号</a> | 2011 -- 2018 © <a href="https://www.sixlab.cn/">六楼实验室</a></h2>
+		<h2><a href="http://www.miitbeian.gov.cn/" target="_blank">豫ICP备15033629号</a> | 2011 ~ 2018 © <a href="https://www.minesoft.tech/">矿软科技</a> - <a href="https://www.sixlab.cn/ target="_blank"">六楼实验室</a></h2>
 	</div>
 </div>
 <!--js-->
